[package]
name = "shc-file-manager"
version = "0.3.0"
description = ""
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
codec = { workspace = true }
hash-db = { workspace = true }
kvdb = { workspace = true }
kvdb-rocksdb = { workspace = true }
kvdb-memorydb = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
trie-db = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true, default-features = true }

shp-traits = { workspace = true }
shc-common = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-state-machine/std",
    "sp-trie/std",
    "shc-common/std",
]
