[package]
authors = { workspace = true }
description = ""
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "shc-file-manager"
publish = false
repository = { workspace = true }
version = "0.5.1"

[lib]

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
codec = { workspace = true }
hash-db = { workspace = true }
kvdb = { workspace = true }
kvdb-memorydb = { workspace = true }
kvdb-rocksdb = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
trie-db = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true, default-features = true }

shc-common = { workspace = true }
shp-traits = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-state-machine/std",
    "sp-trie/std",
    "shc-common/std",
]
