[package]
name = "shc-file-transfer-service"
version = "0.3.3"
description = ""
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
build = "build.rs"
publish = false

[lib]

[lints]
workspace = true

[dependencies]
prost = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
array-bytes = { workspace = true }
futures = { workspace = true }
codec = { workspace = true }
chrono = { workspace = true }

# Substrate
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sc-network = { workspace = true }
sc-network-types = { workspace = true }
sc-utils = { workspace = true }
sc-tracing = { workspace = true }

# Local
shc-actors-framework = { workspace = true }
shc-actors-derive = { workspace = true }
shc-common = { workspace = true }
shp-file-key-verifier = { workspace = true }
shp-file-metadata = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
