[package]
name = "shc-fisherman-service"
version = "0.1.0"
edition = "2021"
authors = ["StorageHub Team"]
description = "Fisherman monitoring service for StorageHub protocol"

[dependencies]
async-trait = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

pallet-storage-providers-runtime-api = { workspace = true }
shc-actors-framework = { workspace = true }
shc-actors-derive = { workspace = true }
shc-common = { workspace = true }
shc-indexer-db = { workspace = true }

sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
