[package]
name = "shc-fisherman-service"
version = "0.3.0"
edition = "2021"
authors = ["StorageHub Team"]
description = "Fisherman monitoring service for StorageHub protocol"

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

pallet-file-system = { workspace = true }
pallet-proofs-dealer = { workspace = true }
pallet-file-system-runtime-api = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-storage-providers-runtime-api = { workspace = true }
shc-actors-framework = { workspace = true }
shc-actors-derive = { workspace = true }
shc-common = { workspace = true }
shc-telemetry = { workspace = true }
shc-indexer-db = { workspace = true }
shp-types = { workspace = true }

sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
