[package]
name = "forest-manager"
version = "0.1.0"
description = ""
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
codec = { workspace = true }
hash-db = { workspace = true }
kvdb = { workspace = true }
kvdb-rocksdb = { workspace = true }
log = { workspace = true }
sp-state-machine = { workspace = true }
reference-trie = { workspace = true }
thiserror = { workspace = true }
trie-db = { workspace = true }

sp-core = { workspace = true }
sp-trie = { workspace = true, default-features = true }
sp-runtime = { workspace = true }

common = { workspace = true }
storage-hub-infra = { workspace = true }
