[package]
authors = { workspace = true }
description = ""
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "shc-forest-manager"
publish = false
repository = { workspace = true }
version = "0.4.0"

[lib]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
codec = { workspace = true }
hash-db = { workspace = true }
kvdb = { workspace = true }
kvdb-memorydb = { workspace = true }
kvdb-rocksdb = { workspace = true }
log = { workspace = true }
reference-trie = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
trie-db = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true, default-features = true }

shc-common = { workspace = true }

[dev-dependencies]
sh-parachain-runtime = { workspace = true }
shp-forest-verifier = { workspace = true }
shp-traits = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-state-machine/std",
    "shp-forest-verifier/std",
    "shp-traits/std",
    "sp-trie/std",
    "shc-common/std",
    "trie-db/std",
]
