[package]
name = "shc-indexer-db"
version = "0.1.0"
description = "Storage Hub Indexer Database definitions, migrations and helpers."
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, default-features = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
thiserror = { workspace = true }
bigdecimal = { workspace = true }

sc-network = { workspace = true }

shc-common = { workspace = true }
sp-core = { workspace = true }
hex = { workspace = true }
