[package]
name = "shc-indexer-db"
version = "0.1.0"
description = "Storage Hub Indexer Database definitions, migrations and helpers."
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { version = "2.2", features = ["postgres"] }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

sc-network = { workspace = true }

shc-common = { workspace = true }
shp-types = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = ["shc-common/std", "shp-types/std", "sp-core/std"]
