[package]
authors = { workspace = true }
description = "Storage Hub Indexer Database definitions, migrations and helpers."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "shc-indexer-db"
publish = false
repository = { workspace = true }
version = "0.4.0"

[lib]

[lints]
workspace = true

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-platform-verifier = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }

sc-network = { workspace = true }

shc-common = { workspace = true }
shp-types = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = ["shc-common/std", "shp-types/std", "sp-core/std"]
