[package]
name = "shc-indexer-service"
version = "0.3.2"
description = "Storage Hub Indexer Service."
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
array-bytes = { workspace = true }
bigdecimal = { workspace = true }
codec = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
futures = { workspace = true }
lazy-static = { workspace = true }
log = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sc-network = { workspace = true }
sc-utils = { workspace = true }
sc-tracing = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true }

# Polkadot
polkadot-runtime-common = { workspace = true }
polkadot-primitives = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }
cumulus-primitives-storage-weight-reclaim = { workspace = true }

# Local
shc-actors-framework = { workspace = true }
shc-common = { workspace = true }
shc-indexer-db = { workspace = true }

# Local pallets
pallet-file-system = { workspace = true }
pallet-file-system-runtime-api = { workspace = true }
pallet-payment-streams = { workspace = true }
pallet-payment-streams-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-storage-providers = { workspace = true }
pallet-storage-providers-runtime-api = { workspace = true }
pallet-bucket-nfts = { workspace = true }
pallet-randomness = { workspace = true }
