[package]
name = "shc-mapping-sync"
description = "Mapping sync logic for StorageHub."
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { workspace = true }
futures-timer = "3.0.3"
log = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"], optional = true }

# Substrate
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true, features = ["default"] }
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true }

[dev-dependencies]
# Substrate
sp-core = { workspace = true, features = ["default"] }
sp-io = { workspace = true }
