[package]
name = "shc-rpc"
description = "RPCs for the StorageHub client."
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
array-bytes = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
jsonrpsee = { features = [
	"client-core",
	"macros",
	"server-core",
], workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
url = "2.5"
suppaftp = { version = "6.0", features = ["async", "rustls"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
mime_guess = "2.0"
futures = "0.3"
futures-util = "0.3"

# Substrate
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-trie = { workspace = true }
sp-keystore = { workspace = true }
sc-rpc-api = { workspace = true }

# Local
pallet-file-system-runtime-api = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
shc-common = { workspace = true }
shc-file-manager = { workspace = true }
shc-forest-manager = { workspace = true }

[features]
default = ["std"]
std = []

[dev-dependencies]
tempfile = "3.0"
mockito = "1.7"
percent-encoding = "2"

[lints]
workspace = true
