[package]
name = "shc-rpc"
description = "RPCs for the StorageHub client."
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
array-bytes = { workspace = true }
hex = { workspace = true }
jsonrpsee = { features = [
	"client-core",
	"macros",
	"server-core",
], workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# Substrate
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-trie = { workspace = true }
sp-keystore = { workspace = true }
sc-rpc-api = { workspace = true }

# Local
pallet-file-system-runtime-api = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
shc-common = { workspace = true }
shc-file-manager = { workspace = true }
shc-forest-manager = { workspace = true }
shp-traits = { workspace = true }
shp-constants = { workspace = true }
storage-hub-runtime = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true
