[package]
name = "shc-rpc"
description = "RPCs for the StorageHub client."
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
array-bytes = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
jsonrpsee = { features = [
	"client-core",
	"macros",
	"server-core",
], workspace = true }
log = { workspace = true }
mime_guess = "2.0"
reqwest = { version = "0.12", features = [
	"stream",
	"rustls-tls",
], default-features = false }
serde = { workspace = true }
suppaftp = { version = "6.0", features = ["async", "rustls"] }
thiserror = "1.0"
tokio = { workspace = true }
tokio-util = { workspace = true }
url = "2.5"

# Substrate
codec = { workspace = true }
sc-network = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-trie = { workspace = true }
sp-keystore = { workspace = true }
sc-rpc-api = { workspace = true }

# Local
pallet-file-system-runtime-api = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-storage-providers-runtime-api = { workspace = true }
shc-actors-framework = { workspace = true }
shc-common = { workspace = true }
shc-file-manager = { workspace = true }
shc-file-transfer-service = { workspace = true }
shc-forest-manager = { workspace = true }
shp-traits = { workspace = true }
shp-types = { workspace = true }
shp-constants = { workspace = true }

[features]
default = ["std"]
std = []

[dev-dependencies]
mockito = "1.7"
percent-encoding = "2"
serial_test = "2"
tempfile = "3.0"

[lints]
workspace = true
