[package]
description = "Prometheus telemetry for StorageHub client"
edition = "2021"
license = "GPL-3.0-only"
name = "shc-telemetry"
version = "0.5.0"

[dependencies]
log = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "net"] }
