[package]
name = "pallet-bucket-nfts"
description = "Pallet for managing non-fungible tokens (NFTs) in a bucket."
version = "0.3.3"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
num-bigint = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-balances = { workspace = true, optional = true }
pallet-file-system = { workspace = true, optional = true }
pallet-storage-providers = { workspace = true, optional = true }
pallet-nfts = { workspace = true }
sp-keyring = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Local
shp-data-price-updater = { workspace = true }
shp-file-metadata = { workspace = true }
shp-traits = { workspace = true }

[dev-dependencies]
serde = { workspace = true }

pallet-file-system = { workspace = true }
pallet-storage-providers = { workspace = true }
pallet-payment-streams = { workspace = true }
shp-constants = { workspace = true }
shp-treasury-funding = { workspace = true }

# Substrate
sp-io = { workspace = true }
sp-keyring = { workspace = true }
sp-trie = { workspace = true }

# Frame
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-file-system/runtime-benchmarks",
    "pallet-storage-providers/runtime-benchmarks",
    "shp-file-metadata/runtime-benchmarks",
    "shp-traits/runtime-benchmarks",
    "shp-treasury-funding/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-file-system/std",
    "pallet-nfts/std",
    "pallet-storage-providers/std",
    "pallet-payment-streams/std",
    "scale-info/std",
    "shp-file-metadata/std",
    "shp-traits/std",
    "shp-treasury-funding/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keyring/std",
    "sp-runtime/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-file-system/try-runtime",
    "pallet-storage-providers/try-runtime",
    "shp-file-metadata/try-runtime",
    "shp-traits/try-runtime",
    "shp-treasury-funding/try-runtime",
    "sp-runtime/try-runtime",
]
