[package]
name = "pallet-file-system"
description = "Pallet exposing storage related actions actors can execute within StorageHub."
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-nfts = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Local
storage-hub-traits = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
pallet-storage-providers = { workspace = true }
pallet-proofs-dealer = { workspace = true }

# Substrate
sp-io = { workspace = true }

# Frame
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-proofs-dealer/runtime-benchmarks",
	"pallet-storage-providers/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proofs-dealer/std",
	"pallet-storage-providers/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-proofs-dealer/try-runtime",
	"pallet-storage-providers/try-runtime",
	"sp-runtime/try-runtime",
]
