[package]
name = "pallet-file-system"
description = "Pallet exposing storage related actions actors can execute within StorageHub."
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
num-bigint = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-nfts = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

# Local
pallet-file-system-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true }

shp-traits = { workspace = true }
shp-file-key-verifier = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
pallet-bucket-nfts = { workspace = true }
pallet-storage-providers = { workspace = true }
shp-forest-verifier = { workspace = true }

# Substrate
sp-io = { workspace = true }
sp-keyring = { workspace = true }

# Frame
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bucket-nfts/std",
	"pallet-file-system-runtime-api/std",
	"pallet-nfts/std",
	"pallet-proofs-dealer/std",
	"pallet-storage-providers/std",
	"scale-info/std",
	"shp-file-key-verifier/std",
	"shp-traits/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-trie/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-proofs-dealer/runtime-benchmarks",
	"pallet-storage-providers/runtime-benchmarks",
	"pallet-bucket-nfts/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-proofs-dealer/try-runtime",
	"pallet-storage-providers/try-runtime",
	"pallet-bucket-nfts/try-runtime",
	"sp-runtime/try-runtime",
]
